# enae644-hw03

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  enae644-hw02.cabal  flake.nix  pyproject.toml  rrtSearch.cabal
data/: obstacles.txt  p03.json  p04.json
data/hw02/: p01.json  p02.json  p05.json
data/hw03/: p01.json  p02.json  p03.json  p04.json  p05.json  robot.txt
nix/: devshell.nix  formatter.nix
outputs/hw02/01/: path.csv  search_tree.csv
outputs/hw02/02/: path.csv  search_tree.csv
outputs/hw02/03/: path.csv  search_tree.csv
outputs/hw02/04/: path.csv  search_tree.csv
outputs/hw02/05/: path.csv  search_tree.csv
outputs/hw03/01/: path.csv  search_tree.csv
outputs/hw03/02/: path.csv  search_tree.csv
outputs/hw03/03/: path.csv  search_tree.csv
outputs/hw03/04/: search_tree.csv
outputs/hw03/05/: path.csv  search_tree.csv
references/: hw02_problems.txt  hw03_problems.txt  notes.typ  problems.txt
src/: graphs.hs  main.hs  rrt.hs
src/rrtSearch/: Dynamics.hs  dynamics.hs  graphs.hs  main.hs  rrt.hs  types.hs
src/rrtVis/: __init__.py  dynamics.py  main.py  parse.py  visualize.py
test/: Main.hs  main.hs
