[project]
name = "rrtVis"
version = "0.2.0"
# description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vai Srivastava", email = "vaisriv@icloud.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
]

[project.scripts]
rrtVis = "rrtVis.main:main"

[tool.uv]
package = true
